--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Djoahn</h2>
+                <p><a href="mailto:feedback@startbootstrap.com">Your Email</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -112,7 +111,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p>Copyright &copy; DJOAHN 2017</p>
         </div>
     </footer>
 
