--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 </head>
     
 <!-- Intro Header -->
- -    <header class="intro">
- -        <div class="intro-body">
- -            <div class="container">
- -                <div class="row">
- -                    <div class="col-md-8 col-md-offset-2">
- -                        <h1 class="brand-heading"></h1>
- -                        <p class="intro-text">
- -                            <br></p>
- -                        <a href="#about" class="btn btn-circle page-scroll">
- -                            <i class="fa fa-angle-double-down animated"></i>
- -                        </a>
- -                    </div>
- -                </div>
- -            </div>
- -        </div>
- -    </header>
+     <header class="intro">
+         <div class="intro-body">
+             <div class="container">
+                 <div class="row">
+                     <div class="col-md-8 col-md-offset-2">
+                         <h1 class="brand-heading"></h1>
+                         <p class="intro-text">
+                             <br></p>
+                         <a href="#about" class="btn btn-circle page-scroll">
+                             <i class="fa fa-angle-double-down animated"></i>
+                         </a>
+                     </div>
+                 </div>
+              </div>
+          </div>
+      </header>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
