--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
                         <a class="page-scroll" href="#about">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Tickets</a>
                     </li>
+                    <li> 
+                        <a class="page-scroll" href="#music">Music</a>
+                    </li> 
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -82,6 +85,15 @@
         </div>
         <!-- /.container -->
     </nav>
+    
+    <!-- Event section --> 
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Events</h2> 
+            </div> 
+        </div> 
+    </section> 
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
