--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="page-scroll" href="#about">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Tickets</a>
+                        <a class="page-scroll" href="#tickets">Tickets</a>
                     </li>
                     <li> 
                         <a class="page-scroll" href="#music">Music</a>
@@ -91,6 +91,24 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Events</h2> 
+            </div> 
+        </div> 
+    </section> 
+    
+    <!-- Ticket section --> 
+    <section id="tickets" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2"> 
+                <h2>Tickets</h2> 
+            </div> 
+        </div> 
+    </section> 
+    
+    <!-- Music section --> 
+    <section id="music" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Music</h2> 
             </div> 
         </div> 
     </section> 
