--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                     <li> 
                         <a class="page-scroll" href="#music">Music</a>
                     </li> 
+                    <li> 
+                        <a class="page-scroll" href="#photos">Photos</a> 
+                    </li> 
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -109,6 +112,15 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Music</h2> 
+            </div> 
+        </div> 
+    </section>
+    
+    <!-- Photos section --> 
+    <section id="photos" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Photo Gallery</h2>
             </div> 
         </div> 
     </section> 
