--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Events</h2> 
+                <!-- Add paragraphs here --> 
+                <img class="img-responsive" src="img/IMG_1974.JPG" alt="Kravers event">
             </div> 
         </div> 
     </section> 
