--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2"> 
                 <h2>Tickets</h2> 
+                <a href="https://www.eventbrite.com/e/520-kravers-sj-live-tickets-34369455968?aff=Joan">Purchase tickets</a>
             </div> 
         </div> 
     </section> 
