--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Djoahn</span>
+                    <i class="fa fa-play-circle"></i> <span class="light">Dgoahn</span>
                 </a>
             </div>
 
@@ -132,7 +132,7 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Djoahn</h2>
+                <h2>Contact</h2>
                 <p><a href="mailto:feedback@startbootstrap.com">Your Email</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
